chore: fixed topbar alignment

--- a/src/common/sidebar/sidebar.css
+++ b/src/common/sidebar/sidebar.css
@@ -5,7 +5,7 @@
     /* background-color: #333; */
     position: fixed; 
     /* Set the navbar to fixed position */
-    top: 90%; 
+    top: 89%; 
     /* left:95%; */
     /* top: 0; 
     Position the navbar at the top of the page */
